[gd_scene load_steps=6 format=3 uid="uid://cj2du41fkkika"]

[ext_resource type="Texture2D" uid="uid://tng44laxayym" path="res://mini_juegos-(2)/imagen/Bosque en llamas al atardecer (1).png" id="1_6yfhi"]
[ext_resource type="Script" uid="uid://c5of7j75x40mm" path="res://mini_juegos-(2)/catching.gd" id="1_f2qru"]
[ext_resource type="PackedScene" uid="uid://cmkyktmk55kq7" path="res://mini_juegos-(2)/player.tscn" id="3_xn36q"]
[ext_resource type="PackedScene" uid="uid://cuu0gdg07j32l" path="res://mini_juegos-(2)/fallingobject_2.tscn" id="4_wjg6o"]
[ext_resource type="PackedScene" uid="uid://ckqvdowr2eemf" path="res://mini_juegos-(2)/fallingobject.tscn" id="5_n3t63"]

[node name="Catching" type="Node2D"]
process_mode = 1
script = ExtResource("1_f2qru")

[node name="backkground" type="Sprite2D" parent="."]
position = Vector2(563, 336)
scale = Vector2(1.15039, 0.660156)
texture = ExtResource("1_6yfhi")

[node name="Timer_1" type="Timer" parent="."]

[node name="Timer_2" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource("3_xn36q")]
position = Vector2(825.914, -12.6008)

[node name="Fallingobject2" parent="." instance=ExtResource("4_wjg6o")]

[node name="Fallingobject" parent="." instance=ExtResource("5_n3t63")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="HUD"]
offset_left = 71.0
offset_top = 38.0
offset_right = 439.0
offset_bottom = 188.0
theme_override_font_sizes/font_size = 33

[node name="Panel" type="Panel" parent="."]
offset_left = 233.0
offset_top = 229.0
offset_right = 896.0
offset_bottom = 441.0

[node name="Label" type="Label" parent="."]
offset_left = 253.0
offset_top = 257.0
offset_right = 881.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 30
text = "Grab the bushes and avoid the fiery sparks!
Use the arrow keys to move."
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 530.0
offset_top = 359.0
offset_right = 592.0
offset_bottom = 422.0
theme_override_font_sizes/font_size = 40
text = "Ok"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
